SIMPLEX-72 Map upload does not repeat inactivation